--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 apply from: '../carbine-common/gradle/build-base.gradle'
+apply plugin: 'groovy'
 
 dependencies {
     compile 'com.google.code.findbugs:jsr305:2.0.1'
@@ -8,10 +9,11 @@ dependencies {
     compile 'org.slf4j:slf4j-api:1.7.7'                                                                                                                                                                            
     compile 'ch.qos.logback:logback-classic:1.1.2'                                                                                                                                                                 
     compile 'ch.qos.logback:logback-core:1.1.2'    
-    compile 'org.codehaus.groovy:groovy-all:2.2.2'
+    groovy 'org.codehaus.groovy:groovy-all:2.2.2'
     compile 'org.projectlombok:lombok:1.12.6'
-
-    testCompile 'junit:junit:4.+'
+    
+    testCompile 'junit:junit:4.11'
     testCompile 'junit-addons:junit-addons:1.4'
     testCompile 'mockit:mockit:0.999.4'
+    testCompile "org.spockframework:spock-core:0.7-groovy-2.0"
 }
