--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ dependencies {
     compile 'ch.qos.logback:logback-core:1.1.2'    
     groovy 'org.codehaus.groovy:groovy-all:2.2.2'
     compile 'org.projectlombok:lombok:1.12.6'
-    compile 'org.hamcrest:hamcrest-core:1.3'
+    compile 'org.hamcrest:hamcrest-all:1.3'
     
     testCompile 'junit:junit:4.11'
     testCompile 'junit-addons:junit-addons:1.4'
